removed overflow scroll on html to allow drag and drop positioning to work correctly in FF

--- a/cms/static/sass/_base.scss
+++ b/cms/static/sass/_base.scss
@@ -4,7 +4,6 @@
 // basic setup
 html {
   font-size: 62.5%;
-  overflow-y: scroll;
 }
 
 body {
